...
                android:background="@drawable/my_drawable"
                android:paddingVertical="3dp">

            </TextView>

            <TextView
                android:id="@+id/browseQRcodesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" QRCodes"
                android:textSize="28sp"
                android:background="@drawable/my_drawable"
                android:paddingVertical="3dp">
...
